<resources>
    <string name="app_name">NewsFinder</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_feed">feed</string>
    <string name="title_history">history</string>
    <string name="title_settings">settings</string>
    <string name="main_toolbar">Toolbar</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="loading_with_dots">Loading…</string>
    <string name="source">source</string>
    <string name="author">author</string>
    <string name="sort_by">sort by</string>

    <string name="categories">categories</string>
    <string name="sources">sources</string>
    <string name="countries">countries</string>
    <string name="languages">languages</string>

    <string name="favourites">favourites</string>
    <string name="language">language</string>
    <string name="theme">theme</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="system_theme">system theme</string>

    <string name="nothing_found">nothing found</string>
    <string name="changing_query_message">try changing the query or filter</string>

    <string name="nothing_here_yet">nothing here yet</string>
    <string name="read_some_news_message">try to go to the feed and read a couple of news. They will appear here</string>

</resources>