<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/update_day_spinner"
                style="@style/darkGreen16UbuntuBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/sortByTextView"
                app:layout_constraintStart_toEndOf="@+id/sortByTextView"
                app:layout_constraintTop_toTopOf="@id/sortByTextView" />


            <TextView
                android:id="@+id/sortByTextView"
                style="@style/gray16UbuntuMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:maxLines="1"
                android:text="@string/sort_by"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoriesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/gray16UbuntuMedium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="21dp"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sortByTextView"
                android:text="@string/categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listViewCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoriesTextView"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/sourcesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/gray16UbuntuMedium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="21dp"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listViewCategories"
                android:text="@string/sources" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listViewSources"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sourcesTextView"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/countriesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/gray16UbuntuMedium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="21dp"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listViewSources"
                android:text="@string/countries" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listViewCountries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countriesTextView"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/languagesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/gray16UbuntuMedium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="21dp"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listViewCountries"
                android:text="@string/languages" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listViewLanguages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/languagesTextView"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>