<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/themeSettingsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/themeIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/themeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/themeTextView"
            app:srcCompat="@drawable/ic_palette" />

        <TextView
            android:id="@+id/themeTextView"
            style="@style/darkGreen16UbuntuBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:text="@string/theme"
            app:layout_constraintStart_toEndOf="@+id/themeIconImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/themeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/themeTextView"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/lightRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/darkGreen16UbuntuBold"
                android:text="@string/light"/>

            <RadioButton
                android:id="@+id/darkRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/darkGreen16UbuntuBold"
                android:text="@string/dark"/>

            <RadioButton
                android:id="@+id/systemRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/darkGreen16UbuntuBold"
                android:text="@string/system_theme"/>
        </RadioGroup>


        <View
            android:id="@+id/themeRectangleView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle_1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/themeRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/themeRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/languageSettingsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeSettingsLL">

        <ImageView
            android:id="@+id/languageIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/languageTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/languageTextView"
            app:srcCompat="@drawable/ic_globe" />

        <TextView
            android:id="@+id/languageTextView"
            style="@style/darkGreen16UbuntuBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:text="@string/language"
            app:layout_constraintStart_toEndOf="@+id/languageIconImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="@id/languageTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/languageTextView" />


        <View
            android:id="@+id/languageRectangleView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle_1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/languageTextView"
            app:layout_constraintTop_toBottomOf="@+id/languageTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favouritesSettingsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageSettingsLL">

        <ImageView
            android:id="@+id/favouritesIconLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/favouritesTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/favouritesTextView"
            app:srcCompat="@drawable/ic_bookmark" />

        <TextView
            android:id="@+id/favouritesTextView"
            style="@style/darkGreen16UbuntuBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:text="@string/favourites"
            app:layout_constraintStart_toEndOf="@+id/favouritesIconLL"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="@id/favouritesTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/favouritesTextView" />


        <View
            android:id="@+id/favouritesRectangleView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle_1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/favouritesTextView"
            app:layout_constraintTop_toBottomOf="@+id/favouritesTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>